--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!-- 26_5-1 Explore Hard rock music search API Example -->
 <!doctype html>
 <html lang="en">
 
@@ -53,6 +54,7 @@
                 </div>
             </div>
             <!-- Single Lyrics -->
+            <h3 id="error-massage" class="text-danger"></h3>
             <div id="song-lyrics" class="single-lyrics text-center">
 
             </div>
